--- a/app/components/companies/company.dashboard.html
+++ b/app/components/companies/company.dashboard.html
@@ -3,7 +3,7 @@
         <div style="padding: 20px 15px;">
             <header class="heading content" style="color:#fff">
                 <a href="javascript:window.location.href=window.location.href" style="color: #eee; font-size: 7px; float: left; margin-left: -40px; margin-top: -12px;">random image</a>
-                <button ng-if="global.user" ui-sref="company.edit({location_path: '', community_path: global.id})" class="btn btn-warning pull-right" style="margin-left:-100px;">Edit</button>
+                <button ng-if="global.user" ui-sref="company.edit({location_path: '', community_path: global.profile.id})" class="btn btn-warning pull-right" style="margin-left:-100px;">Edit</button>
                 <img class="img-circle m-b" ng-show="global.profile.avatar" style="max-height:100px; max-width:100px;" ng-src="{{global.profile.avatar}}" alt="{{global.profile.name}}" onerror="this.src='/public/images/browser_icon.jpg'">
                 <div style="margin:-15px 0;">
                     <button ng-if="global.profile.parents[0]" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-default btn-xs" ui-sref="community.dashboard({location_path: global.profile.home, community_path: global.profile.parents[0]})">
