--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -32,7 +32,7 @@
                 <div class="collapse mobile-navbar" id="mobile-collapse">
                     <ul class="nav navbar-nav">
                         <li ng-if="global.user">
-                            <a ui-sref="user.dashboard({profile: global.user, location_path: global.user.id, community_path: ''})">Your Profile</a>
+                            <a ui-sref="user.dashboard({location_path: global.user.id, community_path: '', tail_path: '', noreload: true, profile: global.user})">Your Profile</a>
                         </li>
                         <li ng-if="!global.user">
                             <div style="margin: 20px 0 0 20px;">
@@ -61,7 +61,7 @@
                 <ul class="nav navbar-nav no-borders">
                     <li ng-if="global.user" class="dropdown" style="padding-top: 10px; padding-left: 10px;" tour-step order="4" title="Your Profile" content="People can ask you questions on your profile page. Click 'End tour' to take a look." placement="bottom">
                         <div class="pull-left" style="padding-top: 1px; white-space: nowrap;     text-align: right; padding-right: 20px;">
-                            <span loading-bars ng-if="global.loaders['myprofile']" style="padding-right:40px;"></span>
+                            <span loading-bars ng-if="global.loaders['myprofile'] && !(global.location_path == global.user.id && global.community_path == '' && global.tail_path == '')" style="padding-right:40px;"></span>
                             <a ui-sref="user.dashboard({location_path: global.user.id, community_path: '', tail_path: '', noreload: true, profile: global.user})" ng-click="global.loaders['myprofile'] = true">{{::global.user.name}}</a>
                             <div style="margin-left: -10px; padding-top: 1px;">
                                 <span ng-repeat="(item, val) in ::global.user.roles" class="user-role" ><i ng-attr-title="{{::item[0].toUpperCase() + item.slice(1);}}" style="font-weight: bold;" ng-class="{'text-primary pe-7s-paper-plane' : item == 'founder', 'text-danger pe-7s-flag' : item == 'leader', 'text-info pe-7s-study' : item == 'mentor', 'text-success pe-7s-gleam' : item == 'investor', 'text-default pe-7s-ball' : item == 'team', 'text-warning pe-7s-portfolio' : item == 'provider'}"></i></span>
