edit industries working

--- a/app/api/templates/invitation.html
+++ b/app/api/templates/invitation.html
@@ -1,84 +1,108 @@
 <table class="module" role="module" data-type="code" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;">
-      <tr>
-        <td height="100%" valign="top">
-          <table style="background-color: transparent !important; border-collapse: collapse; margin: 30px; mso-table-lspace: 0pt; mso-table-rspace: 0pt;" bgcolor="transparent !important">
-       <tbody><tr>
- <td class="left_line" style="border-collapse: collapse; border-spacing: 0; color: #000000; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-size: 15px; font-weight: 200; line-height: 19px; padding: 0; text-align: left; vertical-align: middle; width: 49%" align="left" valign="middle">
-      <hr style="border-bottom-color: #e5e5e5; border-bottom-width: 2px; border-style: none none solid; margin: 0; padding: 0">
+  <tr>
+    <td height="100%" valign="top">
+      <table style="background-color: transparent !important; border-collapse: collapse; margin: 30px; mso-table-lspace: 0pt; mso-table-rspace: 0pt;" bgcolor="transparent !important">
+        <tbody>
+          <tr>
+            <td class="left_line" style="border-collapse: collapse; border-spacing: 0; color: #000000; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-size: 15px; font-weight: 200; line-height: 19px; padding: 0; text-align: left; vertical-align: middle; width: 49%"
+              align="left" valign="middle">
+              <hr style="border-bottom-color: #e5e5e5; border-bottom-width: 2px; border-style: none none solid; margin: 0; padding: 0">
+            </td>
+            <td class:="" style="border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; padding-left: 20px; padding-right: 20px; vertical-align: middle; white-space: nowrap; width: 2%" valign="middle">
+              <p style="color: #242424; font-family: pt sans, helvetica; font-size: 20px; line-height: normal; margin: 0 auto; text-align: center" align="center">%title_bar%</p>
+            </td>
+            <td class="right_line" style="border-collapse: collapse; border-spacing: 0; color: #000000; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-size: 15px; font-weight: 200; line-height: 19px; padding: 0; text-align: left; vertical-align: middle; width: 49%"
+              align="left" valign="middle">
+              <hr style="border-bottom-color: #e5e5e5; border-bottom-width: 2px; border-style: none none solid; margin: 0; padding: 0">
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </td>
-    <td class:="" style="border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; padding-left: 20px; padding-right: 20px; vertical-align: middle; white-space: nowrap; width: 2%" valign="middle">
-      <p style="color: #242424; font-family: pt sans, helvetica; font-size: 20px; line-height: normal; margin: 0 auto; text-align: center" align="center">%title_bar%</p>
-    </td>
-    <td class="right_line" style="border-collapse: collapse; border-spacing: 0; color: #000000; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-size: 15px; font-weight: 200; line-height: 19px; padding: 0; text-align: left; vertical-align: middle; width: 49%" align="left" valign="middle">
-      <hr style="border-bottom-color: #e5e5e5; border-bottom-width: 2px; border-style: none none solid; margin: 0; padding: 0">
-    </td>
-       </tr>
-     </tbody></table>
-        </td>
-      </tr>
-    </table>
+  </tr>
+</table>
 
 <table class="stacked-image-content" cellpadding="0" cellspacing="0" border="0" align="center" style="background: white; border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 600px" bgcolor="white">
-  <tbody><tr>
-    <td class="section_container" style="background: white; border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; width: 600px" bgcolor="white">
-      <div class="color_container" style="background: #fff; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; padding: 20px 5%">
-      <!--INSERT CONTENT-->
-     <!------headline-------->
-     <div><span style="font-size:16px;"><span style="font-family:tahoma,geneva,sans-serif;">%content%</span></span></div>
-    <!-------image-------->
-    <div style="font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; padding-bottom: 20px; padding-top: 25px; text-align: center" align="center">
-      <img src="%user.avatar%" style="-ms-interpolation-mode: bicubic; border-radius: 100%; margin: 0; outline: none; padding: 0; text-decoration: none; width: 75px">
-    </div>
-    <!-------paragraph--------->
-    <div style="color: #676767; font-family: helvetica neue, helvetica; font-size: 15px; font-weight: 200; text-align: center" align="center">
-      <p style="line-height: 120%; margin: 0em 0">Connect with startup founders, mentors, and investors in your city.</p>
-<p style="line-height: 120%; margin: 0em 0"><br></p>
-<p style="line-height: 120%; margin: 0em 0">Get started - it's free.</p>
-    </div>
-      <!--END CONTENT-->
-      </div>
-    </td>
-  </tr>
-</tbody></table>      <table class="button-2-columns" cellpadding="0" cellspacing="0" border="0" align="center" style="background: white; border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 600px" bgcolor="white">
-  <tbody><tr>
-    <td class="section_container" style="background: white; border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; width: 600px" bgcolor="white">
-      <div class="color_container" style="background: #fff; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; padding: 20px 5%">
-      <!--INSERT CONTENT-->
-
-      <table class="section_table" style="background-color: transparent !important; border-collapse: collapse; margin: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100% !important" bgcolor="transparent !important">
-      <tbody><tr>
-      <!-------column 1-------->
-
-       <td style="border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; width: 50%">
-        <a href="%invite_url%" style="color: #317abd; text-decoration: none">
-         <div style="background: #2f93e4; border-radius: 10px; color: #fff; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-size: 16px; font-weight: 200; margin-right: 5px; padding: 10px 0; text-align: center" align="center">
-           Accept invitation
-         </div>
-         </a>
+  <tbody>
+    <tr>
+      <td class="section_container" style="background: white; border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; width: 600px" bgcolor="white">
+        <div class="color_container" style="background: #fff; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; padding: 0 5%">
+          <!--INSERT CONTENT-->
+          <!------headline-------->
+          <div style="text-align: center;">
+            <span style="font-size:16px;"><span style="font-family:tahoma,geneva,sans-serif;">%content%</span></span>
+          </div>
+          <!-------image-------->
+          <div style="font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; padding-bottom: 15px; padding-top: 15px; text-align: center" align="center">
+            <img src="%invitor_image%" style="-ms-interpolation-mode: bicubic; border-radius: 100%; margin: 0; outline: none; padding: 0; text-decoration: none; width: 75px" />
+            <span style="font-size:14px;"><span style="font-family:tahoma,geneva,sans-serif;"><br/>"%invite_message%"</span></span>
+          </div>
+          <!-------paragraph--------->
+          <div style="color: #676767; font-family: helvetica neue, helvetica; font-size: 15px; font-weight: 200; text-align: center" align="center">
+            <p style="line-height: 120%; margin: 0em 0">Connect with startup founders, mentors, and investors in your city.</p>
+            <p style="line-height: 120%; margin: 0em 0"><br></p>
+            <p style="line-height: 120%; margin: 0em 0">Get started - it's free.</p>
+          </div>
+          <!--END CONTENT-->
+        </div>
       </td>
+    </tr>
+  </tbody>
+</table>
+<table class="button-2-columns" cellpadding="0" cellspacing="0" border="0" align="center" style="background: white; border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 600px" bgcolor="white">
+  <tbody>
+    <tr>
+      <td class="section_container" style="background: white; border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; width: 600px" bgcolor="white">
+        <div class="color_container" style="background: #fff; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; padding: 20px 5%">
+          <!--INSERT CONTENT-->
 
-      <!-------column 2-------->
-       <td style="border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; width: 50%">
-        <a href="mailto:%invite_email%?subject=Re:%20Your%20invitation.." style="color: #317abd; text-decoration: none">
-         <div style="background: #cb4862; border-radius: 10px; color: #fff; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-size: 16px; font-weight: 200; margin-right: 5px; padding: 10px 0; text-align: center" align="center">
-           Reply to %invitor_name%
-         </div>
-         </a>
+          <table class="section_table" style="background-color: transparent !important; border-collapse: collapse; margin: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100% !important" bgcolor="transparent !important">
+            <tbody>
+              <tr>
+                <!-------column 1-------->
+
+                <td style="border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; width: 50%">
+                  <a href="%invite_url%" style="color: #317abd; text-decoration: none">
+                    <div style="background: #2f93e4; border-radius: 10px; color: #fff; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-size: 16px; font-weight: 200; margin-right: 5px; padding: 10px 0; text-align: center" align="center">
+                      Accept invitation
+                    </div>
+                  </a>
+                </td>
+
+                <!-------column 2-------->
+                <td style="border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; width: 50%">
+                  <a href="mailto:%invite_email%?subject=Re:%20Your%20invitation.." style="color: #317abd; text-decoration: none">
+                    <div style="background: #cb4862; border-radius: 10px; color: #fff; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-size: 16px; font-weight: 200; margin-right: 5px; padding: 10px 0; text-align: center" align="center">
+                      Reply to %invitor_name%
+                    </div>
+                  </a>
+                </td>
+
+              </tr>
+            </tbody>
+          </table>
+
+          <!--END CONTENT-->
+        </div>
       </td>
-
-   </tr>
-      </tbody></table>
-
-      <!--END CONTENT-->
-      </div>
-    </td>
-  </tr>
-</tbody></table>
-<table class="paragraph" style="background: #ffffff; border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 600px" cellpadding="0" cellspacing="0" border="0" align="center" bgcolor="#ffffff"><tbody><tr><td style="border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; padding: 20px 5%; width: 600px">
-<table style="background: transparent; border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%" bgcolor="transparent"><tbody><tr>
-<td style="border-collapse: collapse; color: #343434; font-family: helvetica neue, helvetica; font-size: 15px; font-weight: 200; text-align: left; width: 540px" align="left">
-<p style="line-height: 120%; margin: 0em 0"></p>
-<center>This invite is just for you. Please do not share it.</center>
-</td>
-</tr></tbody></table>
-</td></tr></tbody></table>
+    </tr>
+  </tbody>
+</table>
+<table class="paragraph" style="background: #ffffff; border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 600px" cellpadding="0" cellspacing="0" border="0" align="center" bgcolor="#ffffff">
+  <tbody>
+    <tr>
+      <td style="border-collapse: collapse; font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; padding: 20px 5%; width: 600px">
+        <table style="background: transparent; border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%" bgcolor="transparent">
+          <tbody>
+            <tr>
+              <td style="border-collapse: collapse; color: #343434; font-family: helvetica neue, helvetica; font-size: 15px; font-weight: 200; text-align: left; width: 540px" align="left">
+                <p style="line-height: 120%; margin: 0em 0"></p>
+                <center>This invite is just for you. Please do not share it.</center>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+    </tr>
+  </tbody>
+</table>
