--- a/app/components/welcome/welcome.html
+++ b/app/components/welcome/welcome.html
@@ -14,15 +14,15 @@
                         <!-- Initial Welcome Screen -->
 
                         <div ng-if="welcome.panel == 'auth'">
-                            <h4 class="text-center" style="margin-bottom: 20px; color: #5A5A5A; font-size: 25px; line-height: 1.25;">Welcome!<br><hr>
-                            You have been invited to join the {{welcome.location}} Startup Community</h4>
+                            <h4 class="text-center" style="margin-bottom: 20px; color: #5A5A5A; font-size: 25px; line-height: 1.25;">Welcome!<br>
+                                <hr> You have been invited to join the {{global.location.city}} Startup Community</h4>
                             <h4 class="text-center" style="margin-bottom: 13px;">
                                 <button class="btn btn-info" ng-click="welcome.authenticate()" ng-class="{'disabled' : welcome.working}">Log in using Linkedin</button>
                                 <span loading-bars ng-show="welcome.working"></span>
                             </h4>
 
                             <hr>
-                            <h5 style="text-align: center;" >Please log in to get started.</h5>
+                            <h5 style="text-align: center;">Please log in to get started.</h5>
                             <br>
                             <div alert-box this-alert="welcome.alert"></div>
                         </div>
@@ -37,7 +37,7 @@
                                 <div class="list-group ">
 
                                     <a class="list-group-item" ng-repeat="r in welcome.selectRoles" ng-if="$index >= 1" ng-class="{'active' : welcome.rolelist[r.value]}" ng-click="welcome.changeRole(r.value)">
-                                        <div class="stats-icon pull-right" ng-show="welcome.rolelist[r.value]"><i class="pe-7s-check fa-2x" ></i></div>
+                                        <div class="stats-icon pull-right" ng-show="welcome.rolelist[r.value]"><i class="pe-7s-check fa-2x"></i></div>
                                         <h5 class="list-group-item-heading">{{ r.text }}</h5>
                                         <p class="list-group-item-text">{{ r.description }}</p>
                                     </a>
@@ -54,11 +54,10 @@
 
                         <div ng-if="welcome.panel == 'profile'" class="hpanel">
                             <div class="panel-heading" style="text-align:center;">
-                                <h4 style="font-size: 25px; line-height: 1.25;">{{global.user.linkedin.firstName}}, please verify your
-                                    profile:</h4><br/>
+                                <h4 style="font-size: 25px; line-height: 1.25;">{{global.user.linkedin.firstName}}, please verify your profile:
+                                </h4><br/>
 
-                                <img class="img-circle m-b" style="height:75px;"
-                                     ngf-thumbnail="global.user.avatar || file || '/public/images/blank_avatar.png'">
+                                <img class="img-circle m-b" style="height:75px;" ngf-thumbnail="global.user.avatar || file || '/public/images/blank_avatar.png'">
                                 <br/>
                                 <label class="uploader_text">
                                     <input type="file" ng-model="file" name="file" ngf-pattern="'image/*'"
@@ -68,25 +67,22 @@
                                 </label>
 
                                 <div style="margin-left: -10px; padding-top: 1px;">
-            <span ng-repeat="(item, val) in welcome.rolelist" class="user-role"><i
+                                    <span ng-repeat="(item, val) in welcome.rolelist" class="user-role"><i
                     ng-attr-title="{{item.toUpperCase()[0] + item.slice(1);}}"
                     ng-class="{'text-primary pe-7s-paper-plane' : val && item == 'founder', 'text-danger pe-7s-flag' : val && item == 'leader', 'text-info pe-7s-study' : val && item == 'mentor', 'text-success pe-7s-gleam' : val && item == 'investor', 'text-default pe-7s-ball' : val && item == 'team', 'text-warning pe-7s-portfolio' : val && item == 'provider'}"></i></span>
                                 </div>
                                 <div>
                                     <h4 style="line-height:1.75;">
-                                        Your name is <input type="text" style="border: 1px solid #eee;" class="input-sm" ng-model="global.user.name" />,<br/>
-                                        your email address is <input type="email" style="border: 1px solid #eee;" class="input-sm" ng-model="global.user.email" /><br/>
-                                        and your headline will be: <input type="text" style="border: 1px solid #eee;" class="input-sm" ng-model="global.user.headline" />.
-                                        <br/><br/>
-                                        Select an industry you most closely associate with:
+                                        Your name is <input type="text" style="border: 1px solid #eee;" class="input-sm" ng-model="global.user.name" />,<br/> your email address is <input type="email" style="border: 1px solid #eee;" class="input-sm" ng-model="global.user.email"
+                                        /><br/> and your headline will be: <input type="text" style="border: 1px solid #eee;" class="input-sm" ng-model="global.user.headline" />.
+                                        <br/><br/> Select an industry you most closely associate with:
                                         <select class="form-control m-b" ng-model="welcome.selectedParent" style="margin-bottom: 5px;" required>
                                             <option ng-repeat="parent in welcome.parents">{{ parent }}</option>
                                         </select>
                                         <div class="m-t-xs" ng-show="!welcome.selectedParent && welcome.submitted">
                                             <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> An industry is required.</span>
                                         </div>
-                                        <br/>
-                                        Click below to edit your summary.
+                                        <br/> Click below to edit your summary.
                                     </h4>
                                 </div>
                                 <div class="summary_form" style="text-align: left;">
@@ -119,7 +115,8 @@
                                 <h4 style="font-size: 25px; line-height: 1.25;">Thank you. Now select up to ten skills or industries that you specialize in.</h4>
                             </div>
                             <div class="panel-body industry_select" style="padding:5px;">
-                                <ui-select multiple ng-model="welcome.skills" ng-disabled="disabled" tagging="true" tagging-label="(new)" autofocus="true" limit="10" alert_title="Sorry, only 10 items here." alert_text="Focus on industries or skills that you are truly badass with." alert_type="warning" style="border:none;">
+                                <ui-select multiple ng-model="welcome.skills" ng-disabled="disabled" tagging="true" tagging-label="(new)" autofocus="true" limit="10" alert_title="Sorry, only 10 items here." alert_text="Focus on industries or skills that you are truly badass with." alert_type="warning"
+                                    style="border:none;">
                                     <ui-select-match placeholder="Start typing an industry or skill..">{{$item}}</ui-select-match>
                                     <ui-select-choices repeat="skill in welcome.industries | filter:$select.search | limitTo: 25">
                                         {{skill.replace('undefined','')}}
@@ -151,7 +148,9 @@
                                                     <span class="text-danger" ng-show="invite.form.email.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> Please enter a valid email address..</span>
                                                 </div>
                                             </div>
-                                            <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled}" value="Invite Person" /><div style="padding-top: 6px; margin-bottom: -24px;" ng-show="global.loaders.sendinvite" loading-bars></div>
+                                            <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled}" value="Invite Person" />
+                                            <div style="padding-top: 6px; margin-bottom: -24px;" ng-show="global.loaders.sendinvite"
+                                                loading-bars></div>
                                         </form>
                                     </div>
                                 </div>
