--- a/app/api/templates/invitation.html
+++ b/app/api/templates/invitation.html
@@ -35,7 +35,7 @@
           <!-------image-------->
           <div style="font-family: PT san serif,Helvetica neue, helvetica, Arial,sans-serif; font-weight: 200; padding-bottom: 15px; padding-top: 15px; text-align: center" align="center">
             <img src="%invitor_image%" style="-ms-interpolation-mode: bicubic; border-radius: 100%; margin: 0; outline: none; padding: 0; text-decoration: none; width: 75px" />
-            <span style="font-size:14px;"><span style="font-family:tahoma,geneva,sans-serif;"><br/>"%invite_message%"</span></span>
+            <span style="font-size:14px;"><span style="font-family:tahoma,geneva,sans-serif;"><br/>%invite_message%</span></span>
           </div>
           <!-------paragraph--------->
           <div style="color: #676767; font-family: helvetica neue, helvetica; font-size: 15px; font-weight: 200; text-align: center" align="center">
