--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -64,7 +64,7 @@
                             <span loading-bars ng-if="global.loaders['myprofile'] && !(global.location_path == global.user.id && global.community_path == '' && global.tail_path == '')" style="padding-right:40px;"></span>
                             <a ui-sref="user.dashboard({location_path: global.user.id, community_path: '', tail_path: '', noreload: true, profile: global.user})" ng-click="global.loaders['myprofile'] = true">{{::global.user.name}}</a>
                             <div style="margin-left: -10px; padding-top: 1px;">
-                                <span ng-repeat="(item, val) in ::global.user.roles" class="user-role" ><i ng-attr-title="{{::item[0].toUpperCase() + item.slice(1);}}" style="font-weight: bold;" ng-class="{'text-primary pe-7s-paper-plane' : item == 'founder', 'text-danger pe-7s-flag' : item == 'leader', 'text-info pe-7s-study' : item == 'mentor', 'text-success pe-7s-gleam' : item == 'investor', 'text-default pe-7s-ball' : item == 'team', 'text-warning pe-7s-portfolio' : item == 'provider'}"></i></span>
+                                <span ng-repeat="(item, val) in ::global.user.roles" class="user-role"><i ng-attr-title="{{::item[0].toUpperCase() + item.slice(1);}}" style="font-weight: bold;" ng-class="{'text-primary pe-7s-paper-plane' : item == 'founder', 'text-danger pe-7s-flag' : item == 'leader', 'text-info pe-7s-study' : item == 'mentor', 'text-success pe-7s-gleam' : item == 'investor', 'text-default pe-7s-ball' : item == 'team', 'text-warning pe-7s-portfolio' : item == 'provider'}"></i></span>
                             </div>
                         </div>
                         <div class="pull-right" style="padding-right: 10px;">
@@ -113,7 +113,8 @@
             <li class="active">
                 <ul class="nav nav-second-level">
                     <li>
-                        <a ui-sref="community.dashboard({location_path: global.location.id, community_path: '', tail_path: ''})" style="padding-left: 6px; font-size: 16px; font-weight: bold; border-bottom: 1px solid #eee; background-color:#F6F8F9; border-left: 2px solid #82BC4B;" ng-click="l_working = $state.params.location_path != global.location.id || $state.params.community_path != '' || $state.params.tail_path != ''">
+                        <a ui-sref="community.dashboard({location_path: global.location.id, community_path: '', tail_path: ''})" style="padding-left: 6px; font-size: 16px; font-weight: bold; border-bottom: 1px solid #eee; background-color:#F6F8F9; border-left: 2px solid #82BC4B;"
+                            ng-click="l_working = $state.params.location_path != global.location.id || $state.params.community_path != '' || $state.params.tail_path != ''">
                             <span style="white-space:nowrap;font-size:18px;">
                                 &nbsp;{{global.location.name}}
                             </span>
@@ -132,7 +133,7 @@
                 </a>-->
                 <ul class="nav nav-second-level">
                     <li ng-if="!global.community.locations || global.community.locations === {}">
-                        <a>No locations yet</a> 
+                        <a>No locations yet</a>
                     </li>
                     <li ng-repeat="item in global.community.locations">
                         <a ui-sref="community.dashboard({location_path: item.id, community_path: '', tail_path: ''})" ng-class="{active: global.path.includes('/' + item.id)}" ng-click="li_working = $state.params.location_path != item.id || $state.params.community_path != '' || $state.params.tail_path != ''"><i class="fa fa-globe"></i>
@@ -145,7 +146,8 @@
 
 
 
-            <li class="active" ng-show="global.nav_top.parents" tour-step order="3" title="Industry Clusters" content="A cluster is an entrepreneurial ecosystem in support of a specific industry.<br><br>Clusters are made up of mentors, investors, companies, accelerators, coworking spaces, and events that connect people and foster creation of new startups." placement="right">
+            <li class="active" ng-show="global.nav_top.parents" tour-step order="3" title="Industry Clusters" content="A cluster is an entrepreneurial ecosystem in support of a specific industry.<br><br>Clusters are made up of mentors, investors, companies, accelerators, coworking spaces, and events that connect people and foster creation of new startups."
+                placement="right">
                 <ul class="nav nav-second-level" style="border-bottom: 1px solid #eee;">
                     <li>
                         <a ui-sref="community.dashboard({location_path: global.location.id, community_path: '', tail_path: ''})" ng-class="{active: global.community.id == global.location.id}" style="padding-left: 12px; font-weight: 600;" ng-click="all_working = $state.params.location_path != global.location.id || $state.params.community_path != '' || $state.params.tail_path != ''">
@@ -169,7 +171,7 @@
                                     {{::c.community_profiles[global.location.id].name[0].toUpperCase() + c.community_profiles[global.location.id].name.slice(1);}}
                                     <span loading-bars ng-show="clc_working"></span>
                                 </a>
-                            </span>
+                        </span>
 
                         </a>
                     </li>
@@ -184,11 +186,14 @@
 
 
     <!-- Main Content -->
-    <div ui-view >
+    <div ui-view>
         <div ng-style="{'background-color': nav.color}" ng-class="{'wrapper' : !global.embedded}">
-            <div class="splash" id="minorsplash" style="display: none;"><div class="splash-title"><a href="/"><img src="/public/images/sc_logo.png" style="width: 75%;" alt="StartupCommunity.org Logo"/></a><img src="/public/images/loading-bars.svg" width="64" height="64" /> </div></div>
+            <div class="splash" id="minorsplash">
+                <div class="splash-title"><a href="/"><img src="/public/images/sc_logo.png" style="width: 75%;" alt="StartupCommunity.org Logo"/></a><img src="/public/images/loading-bars.svg" width="64" height="64" /> </div>
+            </div>
             <div ng-style="{'background-color': nav.color}" ui-view="header"></div>
             <div ng-class="{'content' : !global.embedded}" ng-style="{'background-color': nav.color}">
+                HOLA
                 <div ui-view="content"></div>
             </div>
         </div>
